--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(RubikCubeSolver main.cpp
         Model/RubiksCube.cpp
-        Model/RubiksCube.h)
+        Model/RubiksCube.h
+        Model/RubiksCube3dArray.cpp)
